# grindless

./: .gitignore  LICENSE  README.md
apis/: .gitignore  .gitmodules  Cargo.toml
apis/grindless-core/: Cargo.toml
apis/grindless-core-api/: Cargo.toml  generate_certs.sh
apis/grindless-core-api/src/: env.rs  main.rs  server.rs  state.rs  util.rs
apis/grindless-core-api/src/controllers/: account.rs  mod.rs  oauth.rs
apis/grindless-core-api/src/controllers/services/: summarize.rs
apis/grindless-core-api/src/routers/: mod.rs
apis/grindless-core-api/src/services/: mod.rs  summary.rs
apis/grindless-core/src/: lib.rs
apis/grindless-core/src/db/: sql.rs
apis/grindless-core/src/entities/: account.rs  account_ops.rs  billing.rs  mod.rs
apis/grindless-core/src/response/: errors.rs  mod.rs  response.rs
apis/grindless-core/src/util/: jwt.rs  log.rs  mod.rs
grindless/: README.md  next.config.mjs  package-lock.json  package.json
grindless/src/: config.json  index.d.ts
grindless/src/api/: accounts.ts  api.ts  services.ts  util.ts
grindless/src/api/entities/: account.ts  billing.ts
grindless/src/app/: globals.css  layout.tsx  page.tsx
grindless/src/app/launchpad/: page.tsx
grindless/src/auth/: config.json  google.ts
grindless/src/components/: landing-page.tsx
grindless/src/components/dashboard/: dark-mode-loading.tsx  dashboard-menu.tsx  dashboard-services.tsx  dashboard-top-bar.tsx  dashboard.tsx
grindless/src/components/icons/: google.tsx
grindless/src/providers/: Auth.ts
grindless/src/stores/: oauth.ts
(+5 files in other folders)
