[package]
name = "grindless-core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
log = "0.4"
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fern = { version = "0.6", features = ["colored"] }
humantime = "2"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
rand = "0.8.5"
